# tongues-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.js  log_file  package.json
backend/: .gitignore  Dockerfile  firebase-key.json  firebase_key.json  pytest.ini  requirements.txt  test.sh
backend/app/: app.py  auth.py  config.py  exception.py  main.py  mongo_db.py
backend/app/core/: auther.py  config.py
backend/app/db/: mongodb_utils.py
backend/app/models/: alphabet.py  completion.py  example.py  token.py  translate.py  user.py
backend/app/routes/: alphabet.py  audio.py  auth.py  chat.py  completion.py  example.py  generate.py  model.py  payment.py  ping.py  subscribe.py  suggestion.py  support.py  transcribe.py  translate.py  users.py
backend/app/utils/: auth.py  chat.py  generate.py  language.py  models.py  mongo_client.py  translate.py
backend/tests/: conftest.py  data.py
backend/tests/routes/: test_auth.py  test_example.py  test_translate.py  test_users.py
backend/tests/utils/: test_util_translate.py
conf.d/: glosso.conf
src/: main.rs
