[package]
name = "tongues-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-test = "16.2.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.x", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
