[package]
name = "tongues-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws-sdk-polly = "1.48.0"
axum = "0.7.7"
axum-test = "16.2.0"
base64 = "0.22.1"
lazy_static = "1.5.0"
mockito = "1.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.x", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing-subscriber = "0.3.18"
